apps/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: observability
  labels:
    app: uptime-kuma
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.23.17
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data
            - name: ca-cert
              mountPath: /etc/ssl/certs/ca-certificates.crt
              readOnly: true
      volumes:
        - name: uptime-kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma-pvc
        - name: ca-cert
          hostPath:
            path: /etc/ssl/certs/ca-certificates.crt
            type: File
