apps/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: uptime-kuma
    namespace: observability
    labels:
        app: uptime-kuma
spec:
    type: NodePort
    selector:
        app: uptime-kuma
    ports:
        - name: http
          port: 3001
          targetPort: 3001
          nodePort: 30001
