apps/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: uptime-kuma-ingress
    namespace: observability
    annotations:
        glance/icon: di:uptime-kuma
        glance/name: "Uptime Kuma"
        glance/url: https://status.realtong.cn
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        nginx.ingress.kubernetes.io/proxy-body-size: "25m"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - uptime.realtong.cn
    rules:
        - host: uptime.realtong.cn
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: uptime-kuma
                            port:
                                number: 3001
